--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "user-agents": "^1.1.608"
+  },
+  "devDependencies": {
+    "eslint": "^9.31.0"
   }
 }
